@@ -38,6 +38,7 @@
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
     ADDED: virtual VFS (try virt:/somthing/)
 
+    FIXED: color "Inactive Marked Current Foreground" was ignored (thx heiner)
     FIXED: searcher gets behind the main window, if file browse is pressed
     FIXED: [ 1120827 ] dir copy / move with F5 / F6 doesn't work 
     FIXED: [ 1064578 ] remote URL-s are saved in panel profiles
